kubernetes/apps/core/iam/keycloak/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-vs
  namespace: media
spec:
  hosts:
  - "auth.dagobah.abasitt.tech"
  gateways:
  - iam-gateway
  http:
  - match:
      - scheme:
          exact: http
        uri:
          # This is not a perfect regex but RE2 does not allow negations so we have to hack a it
          # Note: this pattern will redirect to HTTPS all URIs NOT starting with `/.well-` (which should be the best case since your business URIs are unlikely to start with that)
          # this to let pass requests to renew certs like `/.well-known/acme-challenge/...`
          regex: "^/(([^\\.].*)|(\\.[^w].*)|(\\.w[^e].*)|(\\.we[^l].*)|(\\.wel[^l].*)|(\\.well[^\\-].*))"
    redirect:
      scheme: https
      redirectCode: 302 # 302 to not mess with risky permanent redirections since a workaround
  - name: "keycloak-routes"
    route:
    - destination:
        host: keycloak-http
        port:
          number: 80
